# RpgGame

./: Actor.cpp  Actor.h  AnimatedSprite.h  Animation.cpp  Animation.h  CMakeLists.txt  CMakeLists.txt~  Collision.cpp  Collision.h  Engine.cpp  Engine.h  EntityManager.cpp  EntityManager.h  Fps.h  Layer.cpp  Layer.h  Level.cpp  Level.h  Main.cpp  MovementAnimation.cpp  Npc.cpp  Npc.h  Parser.cpp  Parser.h  Player.cpp  Player.h  README.MD  Terrain.cpp  Terrain.h  TextureManager.cpp  Textures.h  TileMap.cpp  TileMap.h  TileMap2.h  main.cpp
Actor/: Actor.cpp  Actor.h
Animation/: AnimatedSprite.cpp
Binaries/: RpgGame  untitled.tmx
Collision/: Collision.cpp  Collision.h
Manager/: EntityManager.cpp  EntityManager.h  LevelLoader.cpp  LevelLoader.h  TextureManager.cpp  TextureManager.h
Map/: Level.cpp  Level.h  Portal.cpp  Portal.h  Terrain.h  TileMap.h
Map/Npc/: Npc.cpp  Npc.h
Player/: Player.cpp  Player.h
Utilities/: Fps.h  Parser.cpp
cmake_modules/: FindSFML.cmake
